# RAG-Powered-Educational-Content-Generator

./: .gitignore  LICENSE  README.md  RUN.md  SETUP_STEPS.md
backend/: .env.example  README.md  check_index.py  debug_upload.py  pyproject.toml  requirements.txt  test_indexing.py  test_pinecone.py
backend/fastapi_backend/: __init__.py  __main__.py  config.py  dependencies.py  main.py  middleware.py
backend/fastapi_backend/models/: document.py  schemas.py
backend/fastapi_backend/routers/: __init__.py  chat.py  competitive_quiz.py  documents.py  flashcards.py  quiz.py  summary.py  upload.py
backend/fastapi_backend/services/: competitive_quiz_service.py  content_generator.py  pdf_extractor.py  rag_service.py  vector_store.py
backend/fastapi_backend/utils/: adaptive_learning.py  chunking.py  errors.py
backend/src/rag_edu_generator/: __init__.py  config.py  main.py
backend/src/rag_edu_generator/api/: __init__.py  middleware.py
backend/src/rag_edu_generator/api/routes/: chat.py  competitive_quiz.py  documents.py  flashcards.py  quiz.py  summary.py  upload.py
backend/src/rag_edu_generator/models/: __init__.py  document.py  schemas.py
backend/src/rag_edu_generator/services/: competitive_quiz_service.py  content_generator.py  pdf_extractor.py  rag_service.py  vector_store.py
backend/src/rag_edu_generator/utils/: adaptive_learning.py  chunking.py  errors.py
docs/: README.md  index.html  script.js  styles.css
frontend/: README.md  pyproject.toml  requirements.txt  run.py  run_streamlit.bat  run_streamlit.ps1
frontend/src/streamlit_app/: __init__.py  main.py
frontend/src/streamlit_app/pages/: __init__.py  chat.py  competitive_quiz.py  flashcards.py  quiz.py  summary.py  upload.py
frontend/src/streamlit_app/utils/: __init__.py  api_client.py
frontend/streamlit_frontend/: __init__.py  __main__.py  main.py
frontend/streamlit_frontend/pages/: chat.py  competitive_quiz.py  flashcards.py  quiz.py  summary.py  upload.py
frontend/streamlit_frontend/utils/: __init__.py  api_client.py
frontend_v2/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend_v2/app/: globals.css  layout.tsx  page.tsx
frontend_v2/app/chat/: page.tsx
frontend_v2/app/competitive-quiz/: page.tsx
frontend_v2/app/flashcards/: page.tsx
frontend_v2/app/quiz/: page.tsx
frontend_v2/app/summary/: page.tsx
frontend_v2/app/upload/: page.tsx
frontend_v2/components/: Header.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend_v2/lib/: api.ts  store.ts
portfolio/: script.js  styles.css
project_documentation/: CHAT_IMPROVEMENTS.md  CORE_REQUIREMENTS.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  FINAL_SUBMISSION_DOCUMENTATION.md  POETRY_SETUP.md  PROJECT_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  TECHNICAL_RESOURCES_COVERAGE.md  TestingDocument.md  VSCODE_SETUP.md
